syntax = "proto3";
import "common/cipher_payload.proto";

package ecliptix.proto.membership;
option csharp_namespace = "Ecliptix.Protobuf.Membership";

service MembershipServices {
  rpc OpaqueRegistrationInitRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
  rpc OpaqueRegistrationCompleteRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
  rpc OpaqueRecoverySecretKeyInitRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
  rpc OpaqueRecoverySecretKeyCompleteRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
  rpc OpaqueSignInInitRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
  rpc OpaqueSignInCompleteRequest(ecliptix.proto.common.CipherPayload) returns (ecliptix.proto.common.CipherPayload);
}
